<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name_agent" translatable="false">LoquaceMobile</string>
    <string name="login_subtitle">Business communication</string>
    <string name="login_server_address_label">Server Address</string>
    <string name="login_server_address_hint">server address</string>
    <string name="login_username_label">Username</string>
    <string name="login_username_hint">username</string>
    <string name="login_password_label" translatable="false">Password</string>
    <string name="login_password_hint" translatable="false">••••••••</string>
    <string name="login_button">Sign In</string>
    <string name="login_error_empty_fields">Please fill in all fields</string>
</resources>